MDEV-11856 json_search doesn't search for values with double quotes character (").

The my_wildcmp function doesn't expect the string parameter to
        have escapements, only the template. So the string
        should be unescaped if necessary.